refactor code to adapt bifrost
